--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -86,6 +86,16 @@
             android:layout_row="0"
             android:onClick="skip"
             android:text="Skip Split" />
+
+        <Button
+            android:id="@+id/startOrSkipB"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="3"
+            android:layout_row="1"
+            android:onClick="startOrSplit"
+            android:text="Start / Split" />
     </GridLayout>
 
     <ScrollView
@@ -106,7 +116,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Log:" />
-
         </LinearLayout>
     </ScrollView>
 
