--- a/res/xml/pref.xml
+++ b/res/xml/pref.xml
@@ -1,38 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <CheckBoxPreference
-        android:defaultValue="true"
-        android:key="pref_use_buttons"
-        android:summary="Volume and headset buttons will be captured by this app."
-        android:title="Use buttons" />
+    <PreferenceCategory android:title="Button usage" >
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="pref_use_buttons"
+            android:summary="Volume and headset buttons will be captured by this app."
+            android:title="Use buttons" />
 
-    <ListPreference
-        android:defaultValue="Split"
-        android:dependency="pref_use_buttons"
-        android:dialogTitle="Function"
-        android:entries="@array/command_names"
-        android:entryValues="@array/commands"
-        android:key="pref_volume_up_function"
-        android:title="Volume up function" />
-    <ListPreference
-        android:defaultValue="Split"
-        android:dependency="pref_use_buttons"
-        android:dialogTitle="Function"
-        android:entries="@array/command_names"
-        android:entryValues="@array/commands"
-        android:key="pref_volume_down_function"
-        android:title="Volume down function" />
-    <ListPreference
-        android:defaultValue="Split"
-        android:dependency="pref_use_buttons"
-        android:dialogTitle="Function"
-        android:entries="@array/command_names"
-        android:entryValues="@array/commands"
-        android:key="pref_headset_function"
-        android:title="Headset function" />
+        <ListPreference
+            android:defaultValue="startorsplit"
+            android:dependency="pref_use_buttons"
+            android:dialogTitle="Function"
+            android:entries="@array/command_names"
+            android:entryValues="@array/commands"
+            android:key="pref_volume_up_function"
+            android:title="Volume up function" />
+        <ListPreference
+            android:defaultValue="skipsplit"
+            android:dependency="pref_use_buttons"
+            android:dialogTitle="Function"
+            android:entries="@array/command_names"
+            android:entryValues="@array/commands"
+            android:key="pref_volume_down_function"
+            android:title="Volume down function" />
+        <ListPreference
+            android:defaultValue="unsplit"
+            android:dependency="pref_use_buttons"
+            android:dialogTitle="Function"
+            android:entries="@array/command_names"
+            android:entryValues="@array/commands"
+            android:key="pref_headset_function"
+            android:title="Headset function" />
+    </PreferenceCategory>
 
     <EditTextPreference
+        android:defaultValue=""
         android:key="pref_ip"
         android:title="Server IP" />
 
