--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -9,114 +10,98 @@
     android:visibility="visible"
     tools:context="com.oldbadmangrey.livesplitremote.MainActivity" >
 
-    <GridLayout
-        android:id="@+id/gridLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_alignTop="@dimen/activity_vertical_margin"
-        android:columnCount="4"
-        android:rowCount="2" >
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
 
         <Button
-            android:id="@+id/startB"
+            android:id="@+id/startOrSplitB"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_row="0"
-            android:onClick="start"
-            android:text="Start" />
-
-        <Button
-            android:id="@+id/pauseB"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="2"
-            android:layout_row="0"
-            android:onClick="pause"
-            android:text="Pause" />
+            android:onClick="startOrSplit"
+            android:text="Start / Split" />
 
         <Button
             android:id="@+id/splitB"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_column="1"
-            android:layout_row="0"
             android:onClick="split"
             android:text="Split" />
 
         <Button
-            android:id="@+id/unsplitB"
+            android:id="@+id/pauseB"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_column="1"
-            android:layout_row="1"
-            android:onClick="unsplit"
-            android:text="Unsplit" />
-
-        <Button
-            android:id="@+id/resetB"
-            style="?android:attr/buttonStyleSmall"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_column="0"
-            android:layout_row="1"
-            android:onClick="reset"
-            android:text="Reset" />
+            android:onClick="pause"
+            android:text="Pause" />
 
         <Button
             android:id="@+id/resumeB"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_column="2"
-            android:layout_row="1"
             android:onClick="resume"
             android:text="Resume" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
+
+        <Button
+            android:id="@+id/startB"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="start"
+            android:text="Start" />
+
+        <Button
+            android:id="@+id/unsplitB"
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="unsplit"
+            android:text="Unsplit" />
 
         <Button
             android:id="@+id/skipB"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_column="3"
-            android:layout_row="0"
             android:onClick="skip"
             android:text="Skip Split" />
 
         <Button
-            android:id="@+id/startOrSkipB"
+            android:id="@+id/resetB"
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_column="3"
-            android:layout_row="1"
-            android:onClick="startOrSplit"
-            android:text="Start / Split" />
-    </GridLayout>
+            android:onClick="reset"
+            android:text="Reset" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Log:" />
 
     <ScrollView
         android:id="@+id/scrollView1"
         android:layout_width="match_parent"
-        android:layout_height="330dp"
-        android:layout_alignLeft="@+id/gridLayout1"
-        android:layout_alignParentBottom="true" >
+        android:layout_height="330dp" >
 
         <LinearLayout
-            android:id="@+id/line"
+            android:id="@+id/lineFoo"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/textView1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Log:" />
         </LinearLayout>
     </ScrollView>
 
-</RelativeLayout>
+</LinearLayout>
